cfn_benchmark/cfn_templates/Tianyi2__IRIS/data__cloudformation_collected_templates_new__template_09712_383714940.yaml
Resources:
  devF7B884FF:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.207.23.0/24
      EnableDnsHostnames: true
      EnableDnsSupport: true
      InstanceTenancy: default
      Tags:
        - Key: Name
          Value: WebThreeTierStack/dev
    Metadata:
      aws:cdk:path: WebThreeTierStack/dev/Resource
  devpubSubnet1Subnet23287467:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.207.23.0/27
      VpcId:
        Ref: devF7B884FF
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: true
      Tags:
        - Key: aws-cdk:subnet-name
          Value: pub
        - Key: aws-cdk:subnet-type
          Value: Public
        - Key: Name
          Value: WebThreeTierStack/dev/pubSubnet1
    Metadata:
      aws:cdk:path: WebThreeTierStack/dev/pubSubnet1/Subnet
  devpubSubnet1RouteTable72B9C606:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: devF7B884FF
      Tags:
        - Key: Name
          Value: WebThreeTierStack/dev/pubSubnet1
    Metadata:
      aws:cdk:path: WebThreeTierStack/dev/pubSubnet1/RouteTable
  devpubSubnet1RouteTableAssociation6BEE9813:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: devpubSubnet1RouteTable72B9C606
      SubnetId:
        Ref: devpubSubnet1Subnet23287467
    Metadata:
      aws:cdk:path: WebThreeTierStack/dev/pubSubnet1/RouteTableAssociation
  devpubSubnet1DefaultRoute13521015:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: devpubSubnet1RouteTable72B9C606
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: devIGW0646BCDD
    DependsOn:
      - devVPCGW615EA99A
    Metadata:
      aws:cdk:path: WebThreeTierStack/dev/pubSubnet1/DefaultRoute
  devpubSubnet1EIPCB57C51B:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: WebThreeTierStack/dev/pubSubnet1
    Metadata:
      aws:cdk:path: WebThreeTierStack/dev/pubSubnet1/EIP
  devpubSubnet1NATGatewayCCB4B444:
    Type: AWS::EC2::NatGateway
    Properties:
      SubnetId:
        Ref: devpubSubnet1Subnet23287467
      AllocationId:
        Fn::GetAtt:
          - devpubSubnet1EIPCB57C51B
          - AllocationId
      Tags:
        - Key: Name
          Value: WebThreeTierStack/dev/pubSubnet1
    Metadata:
      aws:cdk:path: WebThreeTierStack/dev/pubSubnet1/NATGateway
  devpubSubnet2Subnet55FAF4BD:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.207.23.32/27
      VpcId:
        Ref: devF7B884FF
      AvailabilityZone:
        Fn::Select:
          - 1
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: true
      Tags:
        - Key: aws-cdk:subnet-name
          Value: pub
        - Key: aws-cdk:subnet-type
          Value: Public
        - Key: Name
          Value: WebThreeTierStack/dev/pubSubnet2
    Metadata:
      aws:cdk:path: WebThreeTierStack/dev/pubSubnet2/Subnet
  devpubSubnet2RouteTable274B2BE8:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: devF7B884FF
      Tags:
        - Key: Name
          Value: WebThreeTierStack/dev/pubSubnet2
    Metadata:
      aws:cdk:path: WebThreeTierStack/dev/pubSubnet2/RouteTable
  devpubSubnet2RouteTableAssociation70325DA0:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: devpubSubnet2RouteTable274B2BE8
      SubnetId:
        Ref: devpubSubnet2Subnet55FAF4BD
    Metadata:
      aws:cdk:path: WebThreeTierStack/dev/pubSubnet2/RouteTableAssociation
  devpubSubnet2DefaultRouteC4152275:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: devpubSubnet2RouteTable274B2BE8
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: devIGW0646BCDD
    DependsOn:
      - devVPCGW615EA99A
    Metadata:
      aws:cdk:path: WebThreeTierStack/dev/pubSubnet2/DefaultRoute
  devpriSubnet1Subnet9CC589BF:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.207.23.64/27
      VpcId:
        Ref: devF7B884FF
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: false
      Tags:
        - Key: aws-cdk:subnet-name
          Value: pri
        - Key: aws-cdk:subnet-type
          Value: Private
        - Key: Name
          Value: WebThreeTierStack/dev/priSubnet1
    Metadata:
      aws:cdk:path: WebThreeTierStack/dev/priSubnet1/Subnet
  devpriSubnet1RouteTable391A94DC:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: devF7B884FF
      Tags:
        - Key: Name
          Value: WebThreeTierStack/dev/priSubnet1
    Metadata:
      aws:cdk:path: WebThreeTierStack/dev/priSubnet1/RouteTable
  devpriSubnet1RouteTableAssociation27A61CFB:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: devpriSubnet1RouteTable391A94DC
      SubnetId:
        Ref: devpriSubnet1Subnet9CC589BF
    Metadata:
      aws:cdk:path: WebThreeTierStack/dev/priSubnet1/RouteTableAssociation
  devpriSubnet1DefaultRouteCF2CA0EA:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: devpriSubnet1RouteTable391A94DC
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: devpubSubnet1NATGatewayCCB4B444
    Metadata:
      aws:cdk:path: WebThreeTierStack/dev/priSubnet1/DefaultRoute
  devpriSubnet2SubnetBFACF191:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.207.23.96/27
      VpcId:
        Ref: devF7B884FF
      AvailabilityZone:
        Fn::Select:
          - 1
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: false
      Tags:
        - Key: aws-cdk:subnet-name
          Value: pri
        - Key: aws-cdk:subnet-type
          Value: Private
        - Key: Name
          Value: WebThreeTierStack/dev/priSubnet2
    Metadata:
      aws:cdk:path: WebThreeTierStack/dev/priSubnet2/Subnet
  devpriSubnet2RouteTable0B7CEBB0:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: devF7B884FF
      Tags:
        - Key: Name
          Value: WebThreeTierStack/dev/priSubnet2
    Metadata:
      aws:cdk:path: WebThreeTierStack/dev/priSubnet2/RouteTable
  devpriSubnet2RouteTableAssociation834B1023:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: devpriSubnet2RouteTable0B7CEBB0
      SubnetId:
        Ref: devpriSubnet2SubnetBFACF191
    Metadata:
      aws:cdk:path: WebThreeTierStack/dev/priSubnet2/RouteTableAssociation
  devpriSubnet2DefaultRoute180E5576:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: devpriSubnet2RouteTable0B7CEBB0
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: devpubSubnet1NATGatewayCCB4B444
    Metadata:
      aws:cdk:path: WebThreeTierStack/dev/priSubnet2/DefaultRoute
  devrdsSubnet1SubnetE2F26C27:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.207.23.128/27
      VpcId:
        Ref: devF7B884FF
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: false
      Tags:
        - Key: aws-cdk:subnet-name
          Value: rds
        - Key: aws-cdk:subnet-type
          Value: Isolated
        - Key: Name
          Value: WebThreeTierStack/dev/rdsSubnet1
    Metadata:
      aws:cdk:path: WebThreeTierStack/dev/rdsSubnet1/Subnet
  devrdsSubnet1RouteTable3E35ABBE:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: devF7B884FF
      Tags:
        - Key: Name
          Value: WebThreeTierStack/dev/rdsSubnet1
    Metadata:
      aws:cdk:path: WebThreeTierStack/dev/rdsSubnet1/RouteTable
  devrdsSubnet1RouteTableAssociationBBA29A63:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: devrdsSubnet1RouteTable3E35ABBE
      SubnetId:
        Ref: devrdsSubnet1SubnetE2F26C27
    Metadata:
      aws:cdk:path: WebThreeTierStack/dev/rdsSubnet1/RouteTableAssociation
  devrdsSubnet2SubnetEDB25B2D:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.207.23.160/27
      VpcId:
        Ref: devF7B884FF
      AvailabilityZone:
        Fn::Select:
          - 1
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: false
      Tags:
        - Key: aws-cdk:subnet-name
          Value: rds
        - Key: aws-cdk:subnet-type
          Value: Isolated
        - Key: Name
          Value: WebThreeTierStack/dev/rdsSubnet2
    Metadata:
      aws:cdk:path: WebThreeTierStack/dev/rdsSubnet2/Subnet
  devrdsSubnet2RouteTable6BC40890:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: devF7B884FF
      Tags:
        - Key: Name
          Value: WebThreeTierStack/dev/rdsSubnet2
    Metadata:
      aws:cdk:path: WebThreeTierStack/dev/rdsSubnet2/RouteTable
  devrdsSubnet2RouteTableAssociationD7108917:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: devrdsSubnet2RouteTable6BC40890
      SubnetId:
        Ref: devrdsSubnet2SubnetEDB25B2D
    Metadata:
      aws:cdk:path: WebThreeTierStack/dev/rdsSubnet2/RouteTableAssociation
  devIGW0646BCDD:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: WebThreeTierStack/dev
    Metadata:
      aws:cdk:path: WebThreeTierStack/dev/IGW
  devVPCGW615EA99A:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId:
        Ref: devF7B884FF
      InternetGatewayId:
        Ref: devIGW0646BCDD
    Metadata:
      aws:cdk:path: WebThreeTierStack/dev/VPCGW
  EC2instanacerole0444F253:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: sts:AssumeRole
            Effect: Allow
            Principal:
              Service:
                Fn::Join:
                  - ""
                  - - ec2.
                    - Ref: AWS::URLSuffix
        Version: "2012-10-17"
    Metadata:
      aws:cdk:path: WebThreeTierStack/EC2-instanace-role/Resource
  infrasecruitysg80EFC07B:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: WebThreeTierStack/infra-secruity-sg
      GroupName: infra-secruity-sg
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: "-1"
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          Description: Allows SSH access from Internet
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22
        - CidrIp: 0.0.0.0/0
          Description: Allows HTTP access from Internet
          FromPort: 80
          IpProtocol: tcp
          ToPort: 80
        - CidrIp: 0.0.0.0/0
          Description: Allows HTTPS access from Internet
          FromPort: 443
          IpProtocol: tcp
          ToPort: 443
      VpcId:
        Ref: devF7B884FF
    Metadata:
      aws:cdk:path: WebThreeTierStack/infra-secruity-sg/Resource
  networkbastionInstanceProfile7AF895AD:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Roles:
        - Ref: EC2instanacerole0444F253
    Metadata:
      aws:cdk:path: WebThreeTierStack/network-bastion/InstanceProfile
  networkbastion28AA47DE:
    Type: AWS::EC2::Instance
    Properties:
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      IamInstanceProfile:
        Ref: networkbastionInstanceProfile7AF895AD
      ImageId:
        Ref: SsmParameterValueawsserviceamiamazonlinuxlatestamzn2amihvmx8664gp2C96584B6F00A464EAD1953AFF4B05118Parameter
      InstanceType: t2.micro
      KeyName: infra
      SecurityGroupIds:
        - Fn::GetAtt:
            - infrasecruitysg80EFC07B
            - GroupId
      SubnetId:
        Ref: devpubSubnet1Subnet23287467
      Tags:
        - Key: Name
          Value: network-bastion
      UserData:
        Fn::Base64: "#!/bin/bash"
    DependsOn:
      - EC2instanacerole0444F253
    Metadata:
      aws:cdk:path: WebThreeTierStack/network-bastion/Resource
  CDKMetadata:
    Type: AWS::CDK::Metadata
    Properties:
      Analytics: v2:deflate64:H4sIAAAAAAAAE1VPQW7CMBB8C3djak49FkUV4kKtpOK+cRZ1IbEjew1CUf5emzRNe9rZmd3RjJJKKfmyeoN7WJvmuhmM8yiHisFcRYnBRW9QFGerwUOHjD4vH5H7yKJwNrCPhjP39zgJDTE5O4psPKDZyuHUm6yddCF0rFsyVawtPn8XVLrI+Al1iwu/cLsQnCHIzr/HGbwfdB5H4D0w3uEhtKdbgovxwabsCc8HU5Kfbcep71eHlkWFJnrix9672D8z/CMOqTHYqeWMR0HQyaF0U+h5zrL27kwtjuMorGtQXsLmpl6l2kq1ugSitY+WqUNZTvMbL6eFbZQBAAA=
    Metadata:
      aws:cdk:path: WebThreeTierStack/CDKMetadata/Default
    Condition: CDKMetadataAvailable
Parameters:
  SsmParameterValueawsserviceamiamazonlinuxlatestamzn2amihvmx8664gp2C96584B6F00A464EAD1953AFF4B05118Parameter:
    Type: AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>
    Default: /aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2
Outputs:
  networkbastionoutput:
    Value:
      Fn::GetAtt:
        - networkbastion28AA47DE
        - PublicIp
Conditions:
  CDKMetadataAvailable:
    Fn::Or:
      - Fn::Or:
          - Fn::Equals:
              - Ref: AWS::Region
              - af-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-east-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-northeast-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-northeast-2
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-southeast-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-southeast-2
          - Fn::Equals:
              - Ref: AWS::Region
              - ca-central-1
          - Fn::Equals:
              - Ref: AWS::Region
              - cn-north-1
          - Fn::Equals:
              - Ref: AWS::Region
              - cn-northwest-1
      - Fn::Or:
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-central-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-north-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-west-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-west-2
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-west-3
          - Fn::Equals:
              - Ref: AWS::Region
              - me-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - sa-east-1
          - Fn::Equals:
              - Ref: AWS::Region
              - us-east-1
          - Fn::Equals:
              - Ref: AWS::Region
              - us-east-2
      - Fn::Or:
          - Fn::Equals:
              - Ref: AWS::Region
              - us-west-1
          - Fn::Equals:
              - Ref: AWS::Region
              - us-west-2
